--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --env-file .env ./bin/www"
+    "dev": "nodemon --env-file .env ./bin/www",
+    "build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
