--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "promo-playstore-api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --env-file .env ./bin/www",
+    "dev": "nodemon --env-file .env ./index.js",
     "build": "prisma generate",
     "vercel-build": "prisma generate"
   },
