--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
